fixed alert box moving when is-stuck gets added

--- a/app/assets/stylesheets/pages/diff.scss
+++ b/app/assets/stylesheets/pages/diff.scss
@@ -577,7 +577,8 @@
     background-color: $white-light;
     z-index: 190;
 
-    + .files {
+    + .files,
+    + .alert {
       margin-top: 1px;
     }
 
@@ -596,7 +597,8 @@
         display: none;
       }
 
-      + .files {
+      + .files,
+      + .alert {
         margin-top: 30px;
       }
     }
